# HW-ZenAI

./: .gitignore  pyproject.toml
cs231n/assignments/assignment1/: FullyConnectedNets.ipynb  features.ipynb  knn.ipynb  softmax.ipynb  two_layer_net.ipynb
cs231n/assignments/assignment1/cs231n/: layers.py  optim.py
cs231n/assignments/assignment1/cs231n/classifiers/: fc_net.py  k_nearest_neighbor.py  linear_classifier.py  softmax.py
cs231n/assignments/assignment2/: BatchNormalization.ipynb  ConvolutionalNetworks.ipynb  Dropout.ipynb  PyTorch.ipynb  RNN_Captioning_pytorch.ipynb  collect_submission.ipynb
cs231n/assignments/assignment2/cs231n/: layers.py  optim.py  rnn_layers_pytorch.py
cs231n/assignments/assignment2/cs231n/classifiers/: cnn.py  fc_net.py  rnn_pytorch.py
cs231n/assignments/assignment3/: DDPM.ipynb  Self_Supervised_Learning.ipynb  Transformer_Captioning.ipynb  collectSubmission.sh  collect_submission.ipynb
cs231n/assignments/assignment3/cs231n/: captioning_solver.py  classification_solver_vit.py  clip_dino.py  emoji_dataset.py  gaussian_diffusion.py  transformer_layers.py  unet.py
cs231n/assignments/assignment3/cs231n/classifiers/: transformer.py
cs231n/assignments/assignment3/cs231n/datasets/: get_coco_dataset.sh
cs231n/assignments/assignment3/cs231n/simclr/: contrastive_loss.py  data_utils.py  utils.py
